Add JePL file structure

--- a/.sqa/config.yml
+++ b/.sqa/config.yml
@@ -10,13 +10,16 @@ config:
     github.com/EOSC-synergy/sqaaas-tooling:
       branch: 1.7.0-alpha2
       repo: https://github.com/EOSC-synergy/sqaaas-tooling
+    github.com/orviz/IM-sqaaas-test:
+      branch: master
+      repo: https://github.com/orviz/IM-sqaaas-test
 environment:
   JPL_DOCKERFORCEBUILD: enabled
 sqa_criteria:
   SvcQC.Dep:
     repos:
-      this_repo:
+      github.com/orviz/IM-sqaaas-test im_client:
         commands:
-        - /usr/bin/env sh .sqa/script.surly-magnolia-moose.sh
-        container: svcqc.dep_craggy-cerulean-falcon
+        - /usr/bin/env sh .sqa/script.tacky-blue-bombay.sh
+        container: svcqc.dep_scummy-gamboge-squirt
 timeout: 600
