--- a/.sqa/config.yml
+++ b/.sqa/config.yml
@@ -3,12 +3,12 @@ config:
   - id: upv_im_id
     password_var: IM_PASS
     username_var: IM_USER
-  - id: incd_openstack_id
+  - id: ifca_openstack_id
     password_var: OPENSTACK_PASS
     username_var: OPENSTACK_USER
   project_repos:
     github.com/EOSC-synergy/sqaaas-tooling:
-      branch: 1.7.0-alpha2
+      branch: 1.7.0_no_kubectl
       repo: https://github.com/EOSC-synergy/sqaaas-tooling
 environment:
   JPL_DOCKERFORCEBUILD: enabled
@@ -17,6 +17,6 @@ sqa_criteria:
     repos:
       this_repo:
         commands:
-        - /usr/bin/env sh .sqa/script.surly-magnolia-moose.sh
-        container: svcqc.dep_craggy-cerulean-falcon
-timeout: 600
+        - /usr/bin/env sh .sqa/script.nippy-dandelion-emu.sh
+        container: svcqc.dep_cranky-taupe-mouse
+timeout: 1800
